# rn-vad

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RnVad.podspec  lefthook.yml  package.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
__mocks__/: rn-vad.ts
__mocks__/@abhayaku/: rn-vad.ts
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  vad_jni.cpp
android/src/main/cpp/fvad/: common.h
android/src/main/java/com/rnvad/: AudioCaptureThread.kt  RnVadModule.kt  RnVadPackage.kt  VADConfig.kt  VadProcessor.kt
example/: README.md  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/rnvad/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/RnVadExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/RnVadExample.xcodeproj/: project.pbxproj
example/ios/RnVadExample.xcodeproj/xcshareddata/xcschemes/: RnVadExample.xcscheme
example/src/: App.tsx
ios/: RnVad.h  RnVad.mm  VADProcessor.h  VADProcessor.mm
ios/fvad/: LICENSE
src/: NativeRnVad.ts  VAD.ts  index.tsx  multiply.native.tsx  types.ts  useVAD.ts
